crates/clx/src/dashboard/settings/snapshots/clx__dashboard__settings__render__render_snapshots__dashboard_ui_settings_no_fields.snap
---
source: crates/clx/src/dashboard/settings/render.rs
expression: rendered
---
┌ Sections ──────────┐┌ Fields - <CONFIG_PATH>                                                      
│  Validator         ││Field                    Value                      Default                 │
│  Context           ││                                                                            │
│  LLM               ││No fields                                                                   │
│  User Learning     ││                                                                            │
│  Logging           ││                                                                            │
│  Ctx Pressure      ││                                                                            │
│  Sess Recovery     ││                                                                            │
│  MCP Tools         ││                                                                            │
│  Auto Recall       ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
│                    ││                                                                            │
└────────────────────┘└────────────────────────────────────────────────────────────────────────────┘
